--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="header">
+    <header class="header-main">
         <div class = "container"> 
             <nav class="nav">
                 <a class="logo" href="./index.html">Web<span class="logostudio">Studio</span></a>
