--- a/index.html
+++ b/index.html
@@ -110,16 +110,16 @@
                             <p class="worker-position">Product Designer</p>
                             <ul class="box">
                                 <li class="item">
-                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-instagram-2"></use></svg>
+                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-instagram"></use></svg>
                                 </li>
                                 <li class="item">
-                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-Group"></use></svg>
+                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-group"></use></svg>
                                 </li>
                                 <li class="item">
-                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-Vector"></use></svg>
+                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-vector"></use></svg>
                                 </li>
                                 <li class="item">
-                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-linkedin-1"></use></svg>
+                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-linkedin"></use></svg>
                                 </li>
                             </ul>
                         </div>
@@ -131,16 +131,16 @@
                             <p class="worker-position">Frontend Developer</p>
                             <ul class="box">
                                 <li class="item">
-                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-instagram-2"></use></svg>
+                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-instagram"></use></svg>
                                 </li>
                                 <li class="item">
-                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-Group"></use></svg>
+                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-group"></use></svg>
                                 </li>
                                 <li class="item">
-                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-Vector"></use></svg>
+                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-vector"></use></svg>
                                 </li>
                                 <li class="item">
-                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-linkedin-1"></use></svg>
+                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-linkedin"></use></svg>
                                 </li>
                             </ul>
                         </div>
@@ -152,16 +152,16 @@
                             <p class="worker-position">Marketing</p>
                             <ul class="box">
                                 <li class="item">
-                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-instagram-2"></use></svg>
+                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-instagram"></use></svg>
                                 </li>
                                 <li class="item">
-                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-Group"></use></svg>
+                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-group"></use></svg>
                                 </li>
                                 <li class="item">
-                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-Vector"></use></svg>
+                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-vector"></use></svg>
                                 </li>
                                 <li class="item">
-                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-linkedin-1"></use></svg>
+                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-linkedin"></use></svg>
                                 </li>
                             </ul>
                         </div>
@@ -173,16 +173,16 @@
                             <p class="worker-position">UI Designer</p>
                             <ul class="box">
                                 <li class="item">
-                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-instagram-2"></use></svg>
+                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-instagram"></use></svg>
                                 </li>
                                 <li class="item">
-                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-Group"></use></svg>
+                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-group"></use></svg>
                                 </li>
                                 <li class="item">
-                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-Vector"></use></svg>
+                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-vector"></use></svg>
                                 </li>
                                 <li class="item">
-                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-linkedin-1"></use></svg>
+                                    <svg class="icon" width="16px" height="16px"><use href="./images/symbol-defs-social.svg#icon-linkedin"></use></svg>
                                 </li>
                             </ul>
                         </div>
@@ -266,16 +266,16 @@
                 <p class="paragraph">Social media</p>
                 <ul class="box">
                     <li class="item">
-                        <svg class="icon" width="24px" height="24px"><use href="./images/symbol-defs-social.svg#icon-instagram-2"></use></svg>
+                        <svg class="icon" width="24px" height="24px"><use href="./images/symbol-defs-social.svg#icon-instagram"></use></svg>
                     </li>
                     <li class="item">
-                        <svg class="icon" width="24px" height="24px"><use href="./images/symbol-defs-social.svg#icon-Group"></use></svg>
+                        <svg class="icon" width="24px" height="24px"><use href="./images/symbol-defs-social.svg#icon-group"></use></svg>
                     </li>
                     <li class="item">
-                        <svg class="icon" width="24px" height="24px"><use href="./images/symbol-defs-social.svg#icon-Vector"></use></svg>
+                        <svg class="icon" width="24px" height="24px"><use href="./images/symbol-defs-social.svg#icon-vector"></use></svg>
                     </li>
                     <li class="item">
-                        <svg class="icon" width="24px" height="24px"><use href="./images/symbol-defs-social.svg#icon-linkedin-1"></use></svg>
+                        <svg class="icon" width="24px" height="24px"><use href="./images/symbol-defs-social.svg#icon-linkedin"></use></svg>
                     </li>
                 </ul>
             </div>
