add transformation and transition

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a class="logo" href="./index.html">Web<span class="logostudio">Studio</span></a>
                 <ul class="list">
                     <li>
-                        <a class="section" href="./index.html">Studio</a>
+                        <a class="section active" href="./index.html">Studio</a>
                     </li>
                     <li>
                         <a class="section" href="">Portfolio</a>
