--- a/index.html
+++ b/index.html
@@ -198,22 +198,22 @@
                             <ul class="box">
                                 <li class="item">
                                     <a class="item-link" href="" target="_blank">
-                                        <svg class="icon" width="16" height="16px"><use href="./images/icons.svg#icon-instagram"></use></svg>
+                                        <svg class="icon" width="16" height="16"><use href="./images/icons.svg#icon-instagram"></use></svg>
                                     </a>
                                 </li>
                                 <li class="item">
                                     <a class="item-link" href="" target="_blank">
-                                        <svg class="icon" width="16" height="16px"><use href="./images/icons.svg#icon-group"></use></svg>
+                                        <svg class="icon" width="16" height="16"><use href="./images/icons.svg#icon-group"></use></svg>
                                     </a>
                                 </li>
                                 <li class="item">
                                     <a class="item-link" href="" target="_blank">
-                                        <svg class="icon" width="16" height="16px"><use href="./images/icons.svg#icon-vector"></use></svg>
+                                        <svg class="icon" width="16" height="16"><use href="./images/icons.svg#icon-vector"></use></svg>
                                     </a>
                                 </li>
                                 <li class="item">
                                     <a class="item-link" href="" target="_blank">
-                                        <svg class="icon" width="16" height="16px"><use href="./images/icons.svg#icon-linkedin"></use></svg>
+                                        <svg class="icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use></svg>
                                     </a>
                                 </li>
                             </ul>
