--- a/index.html
+++ b/index.html
@@ -298,16 +298,24 @@
                 <p class="paragraph">Social media</p>
                 <ul class="box">
                     <li class="item">
-                        <svg class="icon" width="24" height="24"><use href="./images/icons.svg#icon-instagram"></use></svg>
+                        <a class="item-link" href="" target="_blank">
+                            <svg class="icon" width="24" height="24"><use href="./images/icons.svg#icon-instagram"></use></svg>
+                        </a>
                     </li>
                     <li class="item">
-                        <svg class="icon" width="24" height="24"><use href="./images/icons.svg#icon-group"></use></svg>
+                        <a class="item-link" href="" target="_blank">
+                            <svg class="icon" width="24" height="24"><use href="./images/icons.svg#icon-group"></use></svg>
+                        </a>
                     </li>
                     <li class="item">
-                        <svg class="icon" width="24" height="24"><use href="./images/icons.svg#icon-vector"></use></svg>
+                        <a class="item-link" href="" target="_blank">
+                            <svg class="icon" width="24" height="24"><use href="./images/icons.svg#icon-vector"></use></svg>
+                        </a>
                     </li>
                     <li class="item">
-                        <svg class="icon" width="24" height="24"><use href="./images/icons.svg#icon-linkedin"></use></svg>
+                        <a class="item-link" href="" target="_blank">
+                            <svg class="icon" width="24" height="24"><use href="./images/icons.svg#icon-linkedin"></use></svg>
+                        </a>
                     </li>
                 </ul>
             </div>
