changed css to scss

--- a/index.html
+++ b/index.html
@@ -111,22 +111,22 @@
                             <ul class="box">
                                 <li class="item">
                                     <a class="item-link" href="" target="_blank">
-                                        <svg class="icon" width="16" height="16px"><use href="./images/icons.svg#icon-instagram"></use></svg>
+                                        <svg class="icon" width="16" height="16"><use href="./images/icons.svg#icon-instagram"></use></svg>
                                     </a>
                                 </li>
                                 <li class="item">
                                     <a class="item-link" href="" target="_blank">
-                                        <svg class="icon" width="16" height="16px"><use href="./images/icons.svg#icon-group"></use></svg>
+                                        <svg class="icon" width="16" height="16"><use href="./images/icons.svg#icon-group"></use></svg>
                                     </a>
                                 </li>
                                 <li class="item">
                                     <a class="item-link" href="" target="_blank">
-                                        <svg class="icon" width="16" height="16px"><use href="./images/icons.svg#icon-vector"></use></svg>
+                                        <svg class="icon" width="16" height="16"><use href="./images/icons.svg#icon-vector"></use></svg>
                                     </a>
                                 </li>
                                 <li class="item">
                                     <a class="item-link" href="" target="_blank">
-                                        <svg class="icon" width="16" height="16px"><use href="./images/icons.svg#icon-linkedin"></use></svg>
+                                        <svg class="icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use></svg>
                                     </a>
                                 </li>
                             </ul>
@@ -140,22 +140,22 @@
                             <ul class="box">
                                 <li class="item">
                                     <a class="item-link" href="" target="_blank">
-                                        <svg class="icon" width="16" height="16px"><use href="./images/icons.svg#icon-instagram"></use></svg>
+                                        <svg class="icon" width="16" height="16"><use href="./images/icons.svg#icon-instagram"></use></svg>
                                     </a>
                                 </li>
                                 <li class="item">
                                     <a class="item-link" href="" target="_blank">
-                                        <svg class="icon" width="16" height="16px"><use href="./images/icons.svg#icon-group"></use></svg>
+                                        <svg class="icon" width="16" height="16"><use href="./images/icons.svg#icon-group"></use></svg>
                                     </a>
                                 </li>
                                 <li class="item">
                                     <a class="item-link" href="" target="_blank">
-                                        <svg class="icon" width="16" height="16px"><use href="./images/icons.svg#icon-vector"></use></svg>
+                                        <svg class="icon" width="16" height="16"><use href="./images/icons.svg#icon-vector"></use></svg>
                                     </a>
                                 </li>
                                 <li class="item">
                                     <a class="item-link" href="" target="_blank">
-                                        <svg class="icon" width="16" height="16px"><use href="./images/icons.svg#icon-linkedin"></use></svg>
+                                        <svg class="icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use></svg>
                                     </a>
                                 </li>
                             </ul>
@@ -169,22 +169,22 @@
                             <ul class="box">
                                 <li class="item">
                                     <a class="item-link" href="" target="_blank">
-                                        <svg class="icon" width="16" height="16px"><use href="./images/icons.svg#icon-instagram"></use></svg>
+                                        <svg class="icon" width="16" height="16"><use href="./images/icons.svg#icon-instagram"></use></svg>
                                     </a>
                                 </li>
                                 <li class="item">
                                     <a class="item-link" href="" target="_blank">
-                                        <svg class="icon" width="16" height="16px"><use href="./images/icons.svg#icon-group"></use></svg>
+                                        <svg class="icon" width="16" height="16"><use href="./images/icons.svg#icon-group"></use></svg>
                                     </a>
                                 </li>
                                 <li class="item">
                                     <a class="item-link" href="" target="_blank">
-                                        <svg class="icon" width="16" height="16px"><use href="./images/icons.svg#icon-vector"></use></svg>
+                                        <svg class="icon" width="16" height="16"><use href="./images/icons.svg#icon-vector"></use></svg>
                                     </a>
                                 </li>
                                 <li class="item">
                                     <a class="item-link" href="" target="_blank">
-                                        <svg class="icon" width="16" height="16px"><use href="./images/icons.svg#icon-linkedin"></use></svg>
+                                        <svg class="icon" width="16" height="16"><use href="./images/icons.svg#icon-linkedin"></use></svg>
                                     </a>
                                 </li>
                             </ul>
@@ -229,6 +229,9 @@
                 <ul class="list">
                     <li class="card">
                         <div class="box">
+                            <div class="description-box">
+                                <p class="description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <img src="./images/img-4.jpg" alt="Banking app picture" width="360" />
                         </div>
                         <div class="container">
@@ -238,6 +241,9 @@
                     </li>
                     <li class="card">
                         <div class="box">
+                            <div class="description-box">
+                                <p class="description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <img src="./images/img-5.jpg" alt="Cashless payment picture" width="360" />
                         </div>
                         <div class="container">
@@ -247,6 +253,9 @@
                     </li>
                     <li class="card">
                         <div class="box">
+                            <div class="description-box">
+                                <p class="description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <img src="./images/img-6.jpg" alt="Meditation App picture" width="360" />
                         </div>
                         <div class="container">
@@ -256,6 +265,9 @@
                     </li>
                     <li class="card">
                         <div class="box">
+                            <div class="description-box">
+                                <p class="description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <img src="./images/img-7.jpg" alt="Texi service picture" width="360" />
                         </div>
                         <div class="container">
@@ -265,6 +277,9 @@
                     </li>
                     <li class="card">
                         <div class="box">
+                            <div class="description-box">
+                                <p class="description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <img src="./images/img-8.jpg" alt="Screen Illustrations picture" width="360" />
                         </div>
                         <div class="container">
@@ -274,6 +289,9 @@
                     </li>
                     <li class="card">
                         <div class="box">
+                            <div class="description-box">
+                                <p class="description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <img src="./images/img-9.jpg" alt="Online Courses picture" width="360" />
                         </div>
                         <div class="container">
