--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <ul class="list">
                     <li class="card">
                         <div class="box">
-                            <p class="description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            <p class="paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             <img src="./images/img-4.jpg" alt="Banking app picture" width="360" />
                         </div>
                         <div class="container">
@@ -239,7 +239,7 @@
                     </li>
                     <li class="card">
                         <div class="box">
-                            <p class="description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            <p class="paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             <img src="./images/img-5.jpg" alt="Cashless payment picture" width="360" />
                         </div>
                         <div class="container">
@@ -249,7 +249,7 @@
                     </li>
                     <li class="card">
                         <div class="box">
-                                <p class="description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             <img src="./images/img-6.jpg" alt="Meditation App picture" width="360" />
                         </div>
                         <div class="container">
@@ -259,7 +259,7 @@
                     </li>
                     <li class="card">
                         <div class="box">
-                                <p class="description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             <img src="./images/img-7.jpg" alt="Texi service picture" width="360" />
                         </div>
                         <div class="container">
@@ -269,7 +269,7 @@
                     </li>
                     <li class="card">
                         <div class="box">
-                                <p class="description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             <img src="./images/img-8.jpg" alt="Screen Illustrations picture" width="360" />
                         </div>
                         <div class="container">
@@ -279,7 +279,7 @@
                     </li>
                     <li class="card">
                         <div class="box">
-                                <p class="description">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             <img src="./images/img-9.jpg" alt="Online Courses picture" width="360" />
                         </div>
                         <div class="container">
