--- a/index.html
+++ b/index.html
@@ -229,62 +229,62 @@
                 <ul class="list">
                     <li class="card">
                         <div class="box">
-                            <p class="paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             <img src="./images/img-4.jpg" alt="Banking app picture" width="360" />
+                            <p class="paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="container">
                             <h3 class="title">Banking App</h3>
-                            <p class="paragraph">App</p>
+                            <p class="description">App</p>
                         </div>
                     </li>
                     <li class="card">
                         <div class="box">
-                            <p class="paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             <img src="./images/img-5.jpg" alt="Cashless payment picture" width="360" />
+                            <p class="paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="container">
                             <h3 class="title">Cashless Payment</h3>
-                            <p class="paragraph">Marketing</p>
+                            <p class="description">Marketing</p>
                         </div>
                     </li>
                     <li class="card">
                         <div class="box">
-                                <p class="paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             <img src="./images/img-6.jpg" alt="Meditation App picture" width="360" />
+                            <p class="paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="container">
                             <h3 class="title">Meditation App</h3>
-                            <p class="paragraph">App</p>
+                            <p class="description">App</p>
                         </div>
                     </li>
                     <li class="card">
                         <div class="box">
-                                <p class="paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             <img src="./images/img-7.jpg" alt="Texi service picture" width="360" />
+                            <p class="paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="container">
                             <h3 class="title">Taxi Service</h3>
-                            <p class="paragraph">Marketing</p>
+                            <p class="description">Marketing</p>
                         </div>
                     </li>
                     <li class="card">
                         <div class="box">
-                                <p class="paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             <img src="./images/img-8.jpg" alt="Screen Illustrations picture" width="360" />
+                            <p class="paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="container">
                             <h3 class="title">Screen Illustrations</h3>
-                            <p class="paragraph">Design</p>
+                            <p class="description">Design</p>
                         </div>
                     </li>
                     <li class="card">
                         <div class="box">
-                                <p class="paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             <img src="./images/img-9.jpg" alt="Online Courses picture" width="360" />
+                            <p class="paragraph">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="container">
                             <h3 class="title">Online Courses</h3>
-                            <p class="paragraph">Marketing</p>
+                            <p class="description">Marketing</p>
                         </div>
                     </li>
                 </ul>
